force-app/main/default/objects/Puesto__c/Puesto__c.object-meta.xml
<CustomObject>
    <label>Puesto</label>
    <nameField>
        <label>Puesto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Puestos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>