force-app/main/default/objects/Puesto__c/fields/Empleado__c.field-meta.xml
<CustomField>
    <fullName>Empleado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empleado</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>Puestos</relationshipLabel>
    <relationshipName>Puestos</relationshipName>
    <type>Lookup</type>
</CustomField>