force-app/main/default/objects/Puesto__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Puestos</relationshipLabel>
    <relationshipName>Puestos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>